--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 h1 {
     text-align: center;
 }
+
+.container {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.leftSide {
+    border: 1px solid black;
+
+
+}
+
+.rightSide {
+    border: 1px solid red;
+
+
+}
+
+
